# guess_the_song_backend

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: game.rs  game_manager.rs  main.rs  music_handler.rs
src/game/: guessing_songs.rs  mod.rs
src/model/: mod.rs  search_result.rs  song.rs  user.rs
