[package]
name = "guess_the_song_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4"
actix-web-actors = "4.2.0"
invidious = "0.7.2"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = "1.0.189"
serde_json = "1.0.107"
