[package]
name = "guess_the_song_backend"
version = "1.0.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/VirusBLITZ/guess_the_song_backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
invidious = {version = "0.7.2", no-default-features=true, features = ["reqwest_sync"]}
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4"
actix-web-actors = "4.2.0"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.189"
serde_json = { version = "1.0.107", features = ["raw_value"] }
